# lz4-pure-rs

./: Cargo.toml  README.md
src/: decoder.rs  encoder.rs  lib.rs  liblz4.rs  sys.rs
src/block/: mod.rs
tests/: decode_bench.rs  decode_smoke.rs  destsize_bench.rs  usingdict_bench.rs
tools/: hc_source_repeat_compare.sh  lz4_perf_check.sh  upstream_fast_fixtures.c  upstream_frame_fixtures.c  upstream_hc_block_probe.c
